# v0x

./: main.py  pyproject.toml  requirements.txt
src/core/: config.py  logger.py
src/database/: models.py
src/routers/: download.py  home.py  upload.py
src/static/: help.txt
src/utils/: cryptography.py  telegram.py
